<package format="3">
  <name>f1tenth_cartographer</name>
  <version>0.0.1</version>
  <description>F1TENTH Cartographer launch scripts</description>
  <maintainer email="tpwjd0213@gmail.com">Jeong</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

